--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "io.realm:realm-gradle-plugin:4.3.2"
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -26,3 +27,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
